--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -16,3 +16,26 @@
   border-radius: 12rpx;
   margin: 12rpx;
 }
+
+.filter_container {
+  display: flex;
+  position: fixed;
+  bottom: 192rpx;
+  right: 24rpx;
+  height: 120rpx;
+  width: 120rpx;
+}
+
+.filter_button {
+  display: flex;
+  padding: 0;
+  justify-content: center;
+  border-radius: 60rpx;
+  box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.25);
+}
+
+.filter_icon {
+  width: 60rpx;
+  height: 60rpx;
+  align-self: center;
+}
