encapsulate request into api.js

--- a/miniprogram/pages/filter/filter.wxml
+++ b/miniprogram/pages/filter/filter.wxml
@@ -1,2 +1,9 @@
 <!--miniprogram/pages/filter/filter.wxml-->
-<text>miniprogram/pages/filter/filter.wxml</text>
+<view>
+  <view class="section__title">普通选择器</view>
+  <picker bindchange="bindPickerChange" value="{{index}}" range="{{breeds}}">
+    <view class="picker">
+      当前选择：{{breeds[index]}}
+    </view>
+  </picker>
+</view>
